# MoodTracker

./: .env.example  .gitignore  database.sqlite3  main.py  pyproject.toml
mood_tracker/: database.py  settings.py  tables.py
mood_tracker/api/: __init__.py  auth.py
mood_tracker/models/: __init__.py
mood_tracker/services/: auth.py
