[tool.poetry]
name = "mood-tracker"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]
readme = "README.md"
packages = [{include = "mood_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
